# eclectis

./: .gitignore  CLAUDE.md  CODEBASE.md  DECISIONS.md  PRODUCT.md  README.md  paulos.project.toml
docs/: eclectis-concept.md  pipeline.md
docs/plans/: 2026-03-03-eclectis-design.md  2026-03-03-milestone-plan.md  2026-03-04-inoreader-import-design.md  2026-03-04-inoreader-import-plan.md  2026-03-04-telemetry-design.md  2026-03-04-telemetry-plan.md
engine/: .env.example  Procfile  pyproject.toml  requirements.txt
engine/engine/: __init__.py  config.py  db.py  html_strip.py  main.py  poller.py  scheduler.py  text.py  url.py  user_context.py
engine/engine/handlers/: __init__.py  article_add.py  article_fetch.py  article_score.py  briefing_generate.py  daily_pipeline.py  google_search_scan.py  newsletter_process.py  ping.py  rss_scan.py  user_learn.py
engine/engine/services/: analytics.py  byok.py  claude.py  email.py  usage.py
engine/tests/: test_article_dedup.py  test_google_search_scan.py  test_html_strip.py  test_normalize_url.py  test_rss_encoding.py  test_text.py  test_url.py  test_user_learn.py
supabase/migrations/: 20260303000001_create_user_profiles.sql  20260303000002_create_feeds_and_articles.sql  20260303000003_create_discovery_and_ideas.sql  20260303000004_create_commands_and_events.sql  (+17 more)
web/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo
work-log/: 2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md
(+79 files in other folders)
