[project]
name = "eclectis-engine"
version = "0.1.0"
description = "Eclectis engine — content scoring, AI processing, scheduled jobs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "anthropic>=0.43",
    "httpx[http2]>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "feedparser>=6.0",
    "structlog>=24.4",
    "html2text>=2024.2",
    "apscheduler>=3.10,<4",
    "posthog>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
